pypet 0.1b.11

*   If one wants the old logging method `log_config` should not be specified, i.e.
    setting it to `None` is no longer sufficient`

pypet 0.1b.10

*   New `v_crun_` property simply returning ``'run_ALL'`` if ``v_crun`` is ``None``.

*   BUG FIX: Removed recursive evaluation due to usage of `itertools.chain` during
    recursive node traversal

*   max_depth is now also supported by `f_store`, `f_store_child`, `f_load`, `f_load_child`

*   Loading and Storing internally are no longer truly recursive but iteratively handled.

*   New `v_auto_run_prepend` property of the trajectory to switch off auto run name prepending if
    desired.

*   The trajectory no longer relies on evil `eval` to construct a class. Instead
    it relies on the global scope.

*   Better counting of loading and storing nodes to display rate in nodes/s

*   BUG FIX: Minor bug in the progressbar has been fixed to detect automatic resets.

*   Now support for non-nested empty containers: Empty dictionary, empty list, empty tuple and
    empty numpy array. All of them supported by the ArrayParameter and normal Results.

*   Support for Sparse matrices containing *NO* data (i.e. only zeros).

*   Performance optimization for storage and loading

*   Improved test handling and parsing in `pypet.tests`

*   Environment now supports `git_fail` option to fail if there are not committed changes
    instead of triggering a new commit.

*   Users can now define their own functions to produce run-names

*   Likewise users can define their onw wildcards

*   The lazy version of adding elements (`traj.par.x = 42, 'A comment') now needs to
    be turned on by the user via (`traj.v_lazy_adding = True`) before it can be used.

*   HDF5_STRCOL_MAX_ARRAY_LENGTH has been renamed to HDF5_STRCOL_MAX_RANGE_LENGTH

*   The summary tables have been shortened. Now there's no distinction anymore between
    the actual runs and everything else.
