@@ -46,8 +46,11 @@ from pypet.tests.testutils.ioutils import run_suite, discover_tests, TEST_IMPORT
 if __name__ == '__main__':
     opt_dict = parse_args()
     tests_include = set(('TestMPImmediatePostProc',
-                    'MultiprocLinkNoPoolLockTest', 'MultiprocLinkNoPoolQueueTest',
-                    'MultiprocLinkQueueTest', 'CapTest'))
+                    'MultiprocFrozenPoolSortQueueTest',
+                    'MultiprocLinkNoPoolLockTest',
+                    'MultiprocLinkNoPoolQueueTest',
+                    'MultiprocLinkQueueTest',
+                    'CapTest'))
     pred = lambda class_name, test_name, tags: (class_name in tests_include or
                                                  'multiproc' not in tags)
     suite = discover_tests(pred)
